Adding item punctuation
