# backend/items-api/docs/openapi/swagger.yaml
@@ -28,7 +28,7 @@ definitions:
         type: integer
       images:
         example:
-          - https://www.macstation.com.ar/img/productos/2599-2.jpg
+        - https://www.macstation.com.ar/img/productos/2599-2.jpg
         items:
           type: string
         type: array
@@ -44,6 +44,9 @@ definitions:
       price:
         example: 729.99
         type: number
+      punctuation:
+        example: 5
+        type: integer
       restrictions:
         items:
           type: string
@@ -68,7 +71,7 @@ definitions:
         type: integer
       images:
         example:
-          - https://www.macstation.com.ar/img/productos/2599-2.jpg
+        - https://www.macstation.com.ar/img/productos/2599-2.jpg
         items:
           type: string
         type: array
@@ -84,6 +87,9 @@ definitions:
       price:
         example: 729.99
         type: number
+      punctuation:
+        example: 5
+        type: integer
       restrictions:
         items:
           type: string
@@ -126,7 +132,7 @@ definitions:
         type: integer
       images:
         example:
-          - https://www.macstation.com.ar/img/productos/2599-2.jpg
+        - https://www.macstation.com.ar/img/productos/2599-2.jpg
         items:
           type: string
         type: array
@@ -139,6 +145,9 @@ definitions:
       price:
         example: 729.99
         type: number
+      punctuation:
+        example: 5
+        type: integer
       restrictions:
         items:
           type: string
@@ -163,7 +172,7 @@ definitions:
         type: integer
       images:
         example:
-          - https://www.macstation.com.ar/img/productos/2599-2.jpg
+        - https://www.macstation.com.ar/img/productos/2599-2.jpg
         items:
           type: string
         type: array
@@ -179,6 +188,9 @@ definitions:
       price:
         example: 729.99
         type: number
+      punctuation:
+        example: 5
+        type: integer
       restrictions:
         items:
           type: string
@@ -197,7 +209,7 @@ definitions:
         type: string
       images:
         example:
-          - https://www.macstation.com.ar/img/productos/2599-2.jpg
+        - https://www.macstation.com.ar/img/productos/2599-2.jpg
         items:
           type: string
         type: array
@@ -210,6 +222,9 @@ definitions:
       price:
         example: 729.99
         type: number
+      punctuation:
+        example: 5
+        type: integer
       restrictions:
         items:
           type: string
@@ -234,7 +249,7 @@ definitions:
         type: integer
       images:
         example:
-          - https://www.macstation.com.ar/img/productos/2599-2.jpg
+        - https://www.macstation.com.ar/img/productos/2599-2.jpg
         items:
           type: string
         type: array
@@ -250,6 +265,9 @@ definitions:
       price:
         example: 729.99
         type: number
+      punctuation:
+        example: 5
+        type: integer
       restrictions:
         items:
           type: string
@@ -279,18 +297,18 @@ paths:
     get:
       description: Return the items information fetching information from the database.
       parameters:
-        - description: List limit
-          in: query
-          name: limit
-          required: true
-          type: integer
-        - description: List offset
-          in: query
-          name: offset
-          required: true
-          type: integer
+      - description: List limit
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: List offset
+        in: query
+        name: offset
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -306,20 +324,20 @@ paths:
             $ref: '#/definitions/http.APIErrorHTTP'
       summary: Return a list of items.
       tags:
-        - Items
+      - Items
     post:
       consumes:
-        - application/json
+      - application/json
       description: Store the item information against the database.
       parameters:
-        - description: Item to save
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: '#/definitions/http.SaveItemRequestHTTP'
+      - description: Item to save
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/http.SaveItemRequestHTTP'
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -335,18 +353,18 @@ paths:
             $ref: '#/definitions/http.APIErrorHTTP'
       summary: Store the item information.
       tags:
-        - Items
+      - Items
   /items/{itemID}:
     delete:
       description: Delete the item information against the database.
       parameters:
-        - description: ID of the item to delete
-          in: path
-          name: itemID
-          required: true
-          type: integer
+      - description: ID of the item to delete
+        in: path
+        name: itemID
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -366,17 +384,17 @@ paths:
             $ref: '#/definitions/http.APIErrorHTTP'
       summary: Delete the item information.
       tags:
-        - Items
+      - Items
     get:
       description: Return the item information fetching information from the database.
       parameters:
-        - description: ID of the item to get
-          in: path
-          name: itemID
-          required: true
-          type: integer
+      - description: ID of the item to get
+        in: path
+        name: itemID
+        required: true
+        type: integer
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -396,25 +414,25 @@ paths:
             $ref: '#/definitions/http.APIErrorHTTP'
       summary: Return the item information.
       tags:
-        - Items
+      - Items
     put:
       consumes:
-        - application/json
+      - application/json
       description: Updates the item information against the database.
       parameters:
-        - description: ID of the item to get
-          in: path
-          name: itemID
-          required: true
-          type: integer
-        - description: Item fields to update
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: '#/definitions/http.UpdateItemRequestHTTP'
+      - description: ID of the item to get
+        in: path
+        name: itemID
+        required: true
+        type: integer
+      - description: Item fields to update
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/http.UpdateItemRequestHTTP'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -430,7 +448,7 @@ paths:
             $ref: '#/definitions/http.APIErrorHTTP'
       summary: Updates the item information.
       tags:
-        - Items
+      - Items
 schemes:
-  - http
+- http
 swagger: "2.0"
